flutter django 연동
	- 음식 prediction 모델 구동 및 get, post 테스트

--- a/food_data_insert.ipynb
+++ b/food_data_insert.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "4516d7ae",
    "metadata": {},
    "outputs": [
@@ -291,7 +291,7 @@
        "18  F19    치킨너겟      100   210    11.00     13.00  12.80"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "07b1816f",
    "metadata": {},
    "outputs": [
@@ -445,7 +445,7 @@
        "  12.8]}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "35ddd6ca",
    "metadata": {},
    "outputs": [
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "c57f81f5",
    "metadata": {},
    "outputs": [],
@@ -485,27 +485,6 @@
     "                 fcal=menus['FCAL'][i],fcarboh=menus['FCARBOH'][i],fprotein=menus['FPROTEIN'][i],\\\n",
     "                 ffat=menus['FFAT'][i])\n",
     "    new_menu.save()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "769575ad",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "7"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(menus)"
    ]
   },
   {
@@ -539,9 +518,11 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "96b848c4bca258a2a63872b898c141524dc906dad33f68825714d3bd587441cc"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3.8.5 64-bit ('base': conda)",
    "name": "python3"
   },
   "language_info": {
